--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,10 @@
     />
   </head>
   <body class="page__body">
-    <header class="header">
+    <header
+      class="header"
+      id="header"
+    >
       <div class="container">
         <div class="header__content">
           <div class="top-bar header__top">
@@ -63,7 +66,7 @@
           <p class="header__section-title">ПОДІЇ</p>
           <a
             class="header__button button"
-            href="#"
+            href="#events"
           >
             <div class="button__text-block">
               <p class="button__text">КВИТКИ</p>
@@ -80,7 +83,7 @@
             alt="Natsionalnij hudozhnij muzej Ukrayini Kiyiv"
           />
           <a
-            class="header__icon"
+            class="header__logo logo"
             href="index.html"
           >
             NA
@@ -104,19 +107,19 @@
               ></a>
               <div class="menu__nav">
                 <nav class="nav">
-                  <ul class="nav__list">
-                    <li class="nav__item">
+                  <ul class="nav__list menu__list">
+                    <li class="nav__item menu__item">
                       <a
-                        href="#"
-                        class="nav__link"
+                        href="#gallery"
+                        class="nav__link menu__link"
                       >
                         Галерея
                       </a>
                     </li>
-                    <li class="nav__item">
+                    <li class="nav__item menu__item">
                       <a
-                        href="#"
-                        class="nav__link"
+                        href="#events"
+                        class="nav__link menu__link"
                       >
                         Виставки та події
                       </a>
@@ -124,19 +127,19 @@
                   </ul>
                 </nav>
                 <nav class="nav">
-                  <ul class="nav__list">
-                    <li class="nav__item">
+                  <ul class="nav__list menu__list">
+                    <li class="nav__item menu__item">
                       <a
-                        href="#"
-                        class="nav__link"
+                        href="#subscription"
+                        class="nav__link menu__link"
                       >
                         Про Нас
                       </a>
                     </li>
-                    <li class="nav__item">
+                    <li class="nav__item menu__item">
                       <a
-                        href="#"
-                        class="nav__link"
+                        href="#footer"
+                        class="nav__link menu__link"
                       >
                         Контакти
                       </a>
@@ -145,28 +148,28 @@
                 </nav>
               </div>
             </div>
-            <div class="menu__schedule">
-              <p class="menu__schedule-title">Графік роботи</p>
-              <div class="menu__schedule-content">
-                <p class="menu__workdays">
+            <div class="menu__schedule schedule">
+              <p class="menu__schedule-title schedule__title">Графік роботи</p>
+              <div class="menu__schedule-content schedule__content">
+                <p class="menu__workdays schedule__workdays">
                   12:00 — 20:00
-                  <span class="menu__span">середа</span>
+                  <span class="menu__span schedule__span">середа</span>
                   <br />
                   12:00 — 20:00
-                  <span class="menu__span">четвер</span>
+                  <span class="menu__span schedule__span">четвер</span>
                   <br />
                   12:00 — 20:00
-                  <span class="menu__span">п’ятниця</span>
+                  <span class="menu__span schedule__span">п’ятниця</span>
                   <br />
                   11:00 — 19:00
-                  <span class="menu__span">субота</span>
+                  <span class="menu__span schedule__span">субота</span>
                   <br />
                   11:00 — 19:00
-                  <span class="menu__span">неділя</span>
+                  <span class="menu__span schedule__span">неділя</span>
                 </p>
-                <p class="menu__offdays">
+                <p class="menu__offdays schedule__offdays">
                   Вихідні:
-                  <span class="menu__span">
+                  <span class="menu__span schedule__span">
                     понеділок, вівторок Каса припиняє роботу за 1 годину до
                     закриття музею
                   </span>
@@ -178,8 +181,254 @@
       </div>
       <div class="menu__bg"></div>
     </aside>
-    <body></body>
-    <footer></footer>
+    <body>
+      <section class="events" id="events">
+        <div class="container">
+          <div class="events__content">
+            <h2 class="events__title">Актуальні події</h2>
+            <div class="events__performance performance">
+              <img
+                src="./images/events/performance-1.png"
+                alt="drawing of a beach"
+                class="performance__img"
+              />
+              <div class="performance__text">
+                <div class="performance__date-and-type">
+                  <p class="performance__type">ВИСТАВКА</p>
+                  <p class="performance__date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="performance__title">Йду і повертаюсь</h3>
+                <p class="performance__description">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+            <div class="events__performance performance">
+              <img
+                src="./images/events/performance-2.png"
+                alt="drawing a girl"
+                class="performance__img"
+              />
+              <div class="performance__text">
+                <div class="performance__date-and-type">
+                  <p class="performance__type">ВИСТАВКА</p>
+                  <p class="performance__date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="performance__title">І спогади і мрії</h3>
+                <p class="performance__description">
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="events__lecture lecture">
+          <img
+            src="./images/events/lecture.jpeg"
+            alt="drawing of a sunset"
+            class="lecture__img"
+          />
+          <div class="lecture__text">
+            <div class="lecture__date-and-type">
+              <p class="lecture__type performance__type">ЛЕКЦІЯ</p>
+              <p class="lecture__date performance__date">26/08/2019 - 11:00</p>
+            </div>
+            <h3 class="lecture__title">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+      <section class="gallery" id="gallery">
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+          <div class="gallery__content">
+            <img
+              src="./images/gallery/picture-1.jpeg"
+              alt="woman in traditional ukrainian dress"
+              class="gallery__img gallery__img--1"
+            />
+            <img
+              src="./images/gallery/picture-2.jpeg"
+              alt="ukrainian winter"
+              class="gallery__img gallery__img--2"
+            />
+            <img
+              src="./images/gallery/picture-3.jpeg"
+              alt="spring in park"
+              class="gallery__img gallery__img--3"
+            />
+            <img
+              src="./images/gallery/picture-4.jpeg"
+              alt="at the sea"
+              class="gallery__img gallery__img--4"
+            />
+          </div>
+          <div class="gallery__pagination"></div>
+        </div>
+      </section>
+      <section class="subscription" id="subscription">
+        <div class="container">
+          <div class="subscription__content">
+            <h2 class="subscription__title">Підписка</h2>
+            <p class="subscription__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form
+              onsubmit="this.reset(); return false;"
+              action="#"
+              method="post"
+              class="subscription__form"
+            >
+              <input
+                type="email"
+                class="subscription__input"
+                required
+                placeholder="E-mail"
+              />
+              <button
+                type="submit"
+                class="subscription__submit"
+              ></button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </body>
+    <footer class="footer" id="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__icons">
+            <div class="footer__logo-container">
+              <a
+                class="footer__logo logo"
+                href="index.html"
+              >
+                NA
+                <br />
+                MU
+              </a>
+            </div>
+            <div class="footer__social">
+              <a
+                href="https:\\facebook.com"
+                class="footer__facebook"
+                target="_blank"
+              >
+                <img
+                  src="./images/footer/facebook-logo.svg"
+                  alt="facebook-logo"
+                  class="footer__social-img"
+                />
+              </a>
+              <a
+                href="https:\\instagram.com"
+                class="footer__instagram"
+                target="_blank"
+              >
+                <img
+                  src="./images/footer/instagram-logo.svg"
+                  alt="instagram instagram-logo"
+                  class="footer__social-img"
+                />
+              </a>
+            </div>
+          </div>
+          <div class="footer__schedule schedule">
+            <p class="footer__schedule-title schedule__title">Графік роботи</p>
+            <p class="footer__workdays schedule__workdays">
+              12:00 — 20:00
+              <span class="footer__span schedule__span">середа</span>
+              <br />
+              12:00 — 20:00
+              <span class="footer__span schedule__span">четвер</span>
+              <br />
+              12:00 — 20:00
+              <span class="footer__span schedule__span">п’ятниця</span>
+              <br />
+              11:00 — 19:00
+              <span class="footer__span schedule__span">субота</span>
+              <br />
+              11:00 — 19:00
+              <span class="footer__span schedule__span">неділя</span>
+              <br />
+              <br />
+              Вихідні
+              <span class="footer__span schedule__span">
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </span>
+            </p>
+          </div>
+          <div class="footer__contacts">
+            <p class="contacts__contacts-title">Контакти:</p>
+            <p class="contacts__contacts-content">
+              вул. М. Грушевського, 6; Київ,
+              <br />
+              01001
+              <br />
+              тел. +38 (044) 278-13-57
+              <br />
+              факс +38 (044) 278-74-54
+              <br />
+              e-mail: info@namu.kiev.ua
+            </p>
+          </div>
+          <div class="footer__up-container">
+            <a
+              href="#header"
+              class="footer__up"
+            ></a>
+          </div>
+          <div class="footer__line"></div>
+          <nav class="nav footer__nav footer__nav--1">
+            <ul class="nav__list footer__list">
+              <li class="nav__item footer__item">
+                <a
+                  href="#gallery"
+                  class="nav__link footer__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item footer__item">
+                <a
+                  href="#events"
+                  class="nav__link footer__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <nav class="nav footer__nav footer__nav--2">
+            <ul class="nav__list footer__list">
+              <li class="nav__item footer__item">
+                <a
+                  href="#subscription"
+                  class="nav__link footer__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item footer__item">
+                <a
+                  href="#footer"
+                  class="nav__link footer__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+          <p class="footer__designed">Designed by Zhyriada Marina</p>
+          <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
