--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,486 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon" href="./images/favicon.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
+
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body" id="home">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="top-bar header__top-bar">
+            <a
+              href="#menu"
+              class="icon icon--menu"
+            ></a>
+            <a href="#" class="top-bar__logo logo">
+              <img
+              src="/src/images/NA MU.logo.svg"
+              alt="logo"
+              >
+            </a>
+          </div>
+          <div class="header__bottom">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+            <p class="header__events">Події</p>
+          </div>
+          <a
+            href="#events"
+            class="header__button"
+          >
+            КВИТКИ
+          </a>
+        </div>
+      </div>
+      <div class="header__bg"></div>
+    </header>
+
+    <aside
+      class="page__menu menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a
+              href="#"
+              class="icon icon--close"
+            >
+            </a>
+
+            <nav class="nav menu__nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    class="nav__link"
+                    href="#galery"
+                  >
+                    Галерея
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a
+                    class="nav__link"
+                    href="#about-us"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a
+                    class="nav__link"
+                    href="#events"
+                  >
+                    Виставки та
+                    <br>
+                    подіі
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a
+                    class="nav__link"
+                    href="#contacts"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="menu__schedule schedule">
+            <span class="schedule__title">Графік роботи</span>
+            <div class="schedule__dates">
+              <ul class="schedule__list">
+                <li class="schedule__item">
+                  <span>12:00 - 20:00</span>
+                  середа
+                </li>
+
+                <li class="schedule__item">
+                  <span>12:00 - 20:00</span>
+                  четвер
+                </li>
+
+                <li class="schedule__item">
+                  <span>12:00 - 20:00</span>
+                  п’ятниця
+                </li>
+
+                <li class="schedule__item">
+                  <span>11:00 - 19:00</span>
+                  субота
+                </li>
+
+                <li class="schedule__item">
+                  <span>11:00 - 19:00</span>
+                  неділя
+                </li>
+              </ul>
+
+              <div class="schedule__texts">
+                <p class="schedule__text">
+                  <span>Вихідні:</span> понеділок, вівторок
+                </p>
+                <p class="schedule__text">
+                  Каса припиняє роботу за 1 годину до закриття музею
+                </p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </aside>
+
+    <main class="main">
+      <div class="main__content">
+        <section
+          class="events"
+          id="events"
+        >
+
+          <div class="container">
+            <h2 class="events__title">Актуальні події</h2>
+            <div class="events__wrapper">
+              <article class="events__event event">
+                <img
+                  src="/src/images/events/events1.png"
+                  alt="Events"
+                  class="event__img"
+                >
+                <div class="event__content">
+                  <div class="event__top">
+                    <p class="event__type">ВИСТАВКА</p>
+                    <p class="event__data">26.08-29.11.2019</p>
+                  </div>
+                  <h3 class="event__subtitle">
+                    Йду і повертаюсь
+                  </h3>
+                  <p class="event__text">
+                    Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  </p>
+                </div>
+              </article>
+              <article class="events__event event">
+                <img
+                  src="/src/images/events/events2.png"
+                  alt="Events"
+                  class="event__img"
+                >
+                <div class="event__content">
+                  <div class="event__top">
+                    <p class="event__type">ВИСТАВКА</p>
+                    <p class="event__data">26.08-29.11.2019</p>
+                  </div>
+                  <h3 class="event__subtitle">
+                    І спогади і мрії
+                  </h3>
+                  <p class="event__text">
+                    Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </p>
+                </div>
+              </article>
+            </div>
+          </div>
+          <article class="events__banner">
+            <div class="events__banner-info">
+              <div class="events__banner-content">
+                <div class="events__banner-top">
+                  <p class="events__banner-type">ЛЕКЦІЯ</p>
+                  <p class="events__banner-data">26/08/2019 - 11:00</p>
+                </div>
+                <h3 class="events__banner-subtitle">
+                  Від класицизму до романтизму
+                </h3>
+              </div>
+            </div>
+          </article>
+        </section>
+
+        <section class="galery" id="galery">
+          <h2 class="galery__title">Галерея</h2>
+          <div class="galery__swiper">
+            <div class="swiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img
+                    class="swiper-img"
+                    src="/src/images/galery/galery1.png"
+                    alt="Slider"
+                  >
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    class="swiper-img"
+                    src="/src/images/galery/galery2.png"
+                    alt="Slider"
+                  >
+                </div>
+                <div class="swiper-slide">
+                  <img
+                  class="swiper-img"
+                    src="/src/images/galery/galery4.png"
+                    alt="Slider"
+                  >
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    class="swiper-img"
+                    src="/src/images/galery/galery5.png"
+                    alt="Slider"
+                  >
+                </div>
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+
+          <div class="galery__content">
+            <div class="container">
+              <div class="galery__pictures">
+                <a href="#" class="galery__picture galery__picture--1">
+                  <img
+                    src="/src/images/galery/galery1.png"
+                    alt="picture"
+                    class="galery__img"
+                  >
+                </a>
+
+                <a href="#" class="galery__picture galery__picture--2">
+                  <img
+                    src="/src/images/galery/galery2.png"
+                    alt="picture"
+                    class="galery__img"
+                  >
+                </a>
+
+                <a href="#" class="galery__picture galery__picture--3">
+                  <img
+                    src="/src/images/galery/galery3.png"
+                    alt="picture"
+                    class="galery__img"
+                  >
+                </a>
+
+                <a href="#" class="galery__picture galery__picture--4">
+                  <img
+                    src="/src/images/galery/galery4.png"
+                    alt="picture"
+                    class="galery__img"
+                  >
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="subscription" id="subscription">
+
+          <h2 class="subscription__title">Підписка</h2>
+          <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+          <form
+            action="#"
+            onsubmit="this.reset(); return false;"
+            class="subscription__form"
+          >
+            <input
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              class="subscription__input"
+              required
+            >
+            <button
+              type="submit"
+              class="subscription__button"
+            >
+              <img
+                src="/src/images/icons/arrow-black.svg"
+                alt="button"
+              >
+            </button>
+          </form>
+        </section>
+      </div>
+    </main>
+
+    <footer class="footer" id="contacts">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__top">
+            <a href="#" class="footer__logo">
+              <img
+              src="/src/images/NA MU.logo.svg"
+              alt="logo"
+              >
+            </a>
+
+            <div class="footer__socials">
+              <a
+                href="#"
+                class="icon icon--facebook"
+                target="_blank"
+              >
+              </a>
+              <a
+                href="#"
+                class="icon icon--instagram"
+                target="_blank"
+              >
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__content">
+            <div class="footer__schedule schedule">
+              <span class="schedule__title">Графік роботи</span>
+              <div class="schedule__dates schedule__dates--footer">
+                <ul class="schedule__list">
+                  <li class="schedule__item">
+                    <span>12:00 - 20:00</span>
+                    середа
+                  </li>
+
+                  <li class="schedule__item">
+                    <span>12:00 - 20:00</span>
+                    четвер
+                  </li>
+
+                  <li class="schedule__item">
+                    <span>12:00 - 20:00</span>
+                    п’ятниця
+                  </li>
+
+                  <li class="schedule__item">
+                    <span>11:00 - 19:00</span>
+                    субота
+                  </li>
+
+                  <li class="schedule__item">
+                    <span>11:00 - 19:00</span>
+                    неділя
+                  </li>
+                </ul>
+
+                <div class="schedule__texts">
+                  <p class="schedule__text">
+                    <span>Вихідні:</span> понеділок, вівторок
+                  </p>
+                  <p class="schedule__text">
+                    Каса припиняє роботу за 1 годину до закриття музею
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="footer__contacts">
+              <h2 class="footer__contacts-title">Контакти:</h2>
+              <a
+                href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/@50.4508402,30.5308666,17z/data=!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.4494397!4d30.5307593!16s%2Fg%2F11l76wtstx?entry=ttu"
+                class="footer__contacts-link"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+              <br>
+              <a
+                href="tel:+38 (044) 278-13-57"
+                class="footer__contacts-link"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+              <br>
+              <a
+                href="tel:+38 (044) 278-74-54"
+                class="footer__contacts-link"
+              >
+                факс +38 (044)
+                278-74-54
+              </a>
+              <br>
+              <a
+                href="mailto:info@namu.kiev.ua"
+                class="footer__contacts-link"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__go-up-wrapper">
+            <a
+              href="#"
+              class="footer__go-up"
+            >
+              <img
+                src="/src/images/icons/Arrow up.svg"
+                alt="arrow-up"
+              >
+            </a>
+          </div>
+
+          <nav class="nav footer__nav">
+            <ul class="nav__list nav__list--footer">
+              <li class="nav__item">
+                <a
+                  class="nav__link nav__link--footer"
+                  href="#galery"
+                >
+                  Галерея
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a
+                  class="nav__link nav__link--footer"
+                  href="#about-us"
+                >
+                  Про Нас
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a
+                  class="nav__link nav__link--footer"
+                  href="#events"
+                >
+                  Виставки та подіі
+                </a>
+              </li>
+
+              <li class="nav__item">
+                <a
+                  class="nav__link nav__link--footer"
+                  href="#contacts"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="footer__bottom">
+            <p class="footer__author">Designed by Zhyriada Marina</p>
+            <p class="footer__copyright">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="./scripts/main.js"></script>
   </body>
 </html>
